# transformer-ablation-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
configs/: default.yaml
data/: prompts.json
scripts/: app.py  run_ablation.py
src/transformer_ablation/: cli.py  config.py  diagram.py  experiment.py  hooks.py  induction.py  metrics.py  model.py  plotting.py  prompts.py
