[project]
name = "transformer-ablation"
version = "0.1.0"
description = "Causal ablations of transformer layers, MLPs, and residual streams."
requires-python = ">=3.9"
dependencies = [
  "transformer-lens>=2.0.0",
  "torch>=2.1.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "PyYAML>=6.0.0",
  "streamlit>=1.30.0"
]

[project.scripts]
transformer-ablation = "transformer_ablation.cli:main"
